# VS

./: .clang-format  .gitignore  CMakeLists.txt
core/: CMakeLists.txt
core/include/: core.h  http.h  http_error.h  models.h  router.h  session.h  util.h
core/src/: core.cpp
docker/: Dockerfile.build
docs/: .gitignore  Projektbeschreibung.md  Projektbeschreibung.tex
frontend/: index.html
frontend/css/: index.css
frontend/js/: index.js
hub/: CMakeLists.txt  hub.cpp
prosumer/: CMakeLists.txt  prosumer.cpp  script.cpp  script.h
prosumer/scripts/: wave.lua
